--- a/src/main/resources/static/js/bower.json
+++ b/src/main/resources/static/js/bower.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "jquery": "^3.2.1",
-    "jquery-confirm": "^2.7.0",
+    "jquery-confirm2": "^3.3.2",
     "backbone": "^1.3.3",
     "dustjs-linkedin": "^2.7.5",
     "dustjs-helpers": "^1.7.3",
