--- a/src/main/resources/static/js/bower.json
+++ b/src/main/resources/static/js/bower.json
@@ -19,7 +19,6 @@
     "dustjs-helpers": "^1.7.3",
     "requirejs": "^2.3.5",
     "text": "^2.0.15",
-    "backbone.validation": "backbone-validation#^0.11.5",
-    "jquery-validation": "^1.17.0"
+    "backbone.validation": "backbone-validation#^0.11.5"
   }
 }
