--- a/src/main/resources/static/js/bower.json
+++ b/src/main/resources/static/js/bower.json
@@ -20,6 +20,7 @@
     "requirejs": "^2.3.5",
     "text": "^2.0.15",
     "backbone.validation": "backbone-validation#^0.11.5",
-    "backbone-route-control": "^0.1.0"
+    "backbone-route-control": "^0.1.0",
+    "backbone.paginator": "^2.0.6"
   }
 }
