--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-firstName=org.h2.Driver
+spring.datasource.initialization-mode=always
 
 # ===============================
 # = Thymeleaf configurations
@@ -22,3 +23,5 @@ spring.thymeleaf.cache=false
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+
+debug=true
