added internationalization and small refactoring.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,12 @@ debug=true
 #server.ssl.key-store=classpath:keystore.jks
 #server.ssl.key-store-password=secret
 #server.ssl.key-password=another-secret
+
+#spring.thymeleaf.templateResolverOrder=1
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.check-template=true
+#spring.thymeleaf.prefix=classpath:/static/templates/
+#
+#spring.thymeleaf.enabled=true
+#
+#spring.thymeleaf.suffix=.html
